[package]
name = "rust-38"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.0", features = ["full"] }
anyhow = { version = "1.0.57"}
serde = {version = "1.0.137"}
futures = { version = "0.3.21"}